--- a/NativeSpark/src/main/resources/templates/cart.html
+++ b/NativeSpark/src/main/resources/templates/cart.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="_csrf" th:content="${_csrf.token}"/>
 
     <title>Cart - NativeSpark</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         body {
             display: flex;
@@ -15,14 +15,6 @@
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
         }
-        /*.footer-custom {*/
-        /*    background-color: #014017;*/
-        /*    color: white;*/
-        /*    padding: 20px 0;*/
-        /*    text-align: center;*/
-        /*    font-size: 1rem;*/
-        /*    margin-top: auto;*/
-        /*}*/
         button span {
             transition: color 0.3s ease;
             font-size: 1.5rem;
@@ -89,11 +81,6 @@
         <p>Your cart is empty.</p>
     </div>
 </div>
-
-
-<!--<footer class="footer-custom">-->
-<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
-<!--</footer>-->
 
 <div th:replace="~{footer}"></div>
 
