--- a/NativeSpark/src/main/resources/templates/my_orders.html
+++ b/NativeSpark/src/main/resources/templates/my_orders.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Orders</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <style>
         body {
             display: flex;
@@ -44,5 +43,6 @@
 </div>
 
 <div th:replace="~{footer}"></div>
+
 </body>
 </html>
