--- a/NativeSpark/src/main/resources/templates/purchase.html
+++ b/NativeSpark/src/main/resources/templates/purchase.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purchase - NativeSpark</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             display: flex;
@@ -12,20 +11,6 @@
             min-height: 100vh;
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
-        }
-
-        .navbar-custom {
-            background-color: rgba(2, 55, 30, 0.9) !important;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
         }
 
         .purchase-container {
@@ -160,10 +145,6 @@
         </div>
     </div>
 </div>
-
-<!--<footer class="footer-custom">-->
-<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
-<!--</footer>-->
 
 <div th:replace="~{footer}"></div>
 
